added title and UI - glassmorphism xd prototype

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Glassmorphism Login</title>
+    <title>Glassmorphism Login - hi.coder</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -29,7 +29,6 @@
         </div>
         <div class="circle circle-two"></div>
       </div>
-
       <div class="theme-btn-container"></div>
     </section>
     <script src="./main.js"></script>
